--- a/mains.css
+++ b/mains.css
@@ -751,9 +751,9 @@ a:hover .arrow {
     width: 50%
 }
 
-.new-tables thead th {
+/* .new-tables thead th {
     white-space: nowrap !important;
-}
+} */
 
 @media (max-width: 767.98px) {
     .pricing-card-horizontal-bottom {
@@ -826,6 +826,6 @@ a:hover .arrow {
     }
 
     .new-tables tbody tr td:nth-child(2) {
-        width: 95%;
+        width: 95% !important;
     }
 }
