--- a/tablepricing.css
+++ b/tablepricing.css
@@ -461,7 +461,7 @@ p {
     height: 98px;    
     align-items: center;
     background-color: #050505;
-    transition: transform 1s cubic-bezier(0,.36,.49,.53);
+    transition: all 1s cubic-bezier(0,.36,.49,.53);
 }
 
 .header.fixed{
