--- a/tablepricing.css
+++ b/tablepricing.css
@@ -528,3 +528,49 @@ p {
     margin-left: 24px;
     display: inline-block;
 }
+
+
+@media (max-width: 768px){
+    .card__top{
+        flex-direction:  column;
+        justify-content: space-between;
+    }
+
+    .card__bottom{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .card__button__group {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .card__pricing__list {
+        width: 100%;
+        margin-bottom: 32px;
+    }
+
+    .card__pricing__list ul{
+        display: flex;
+        flex-direction: column;
+    }
+    .card__pricing__list li{
+        padding: 8px 0;
+    }
+}
+
+@media (max-width: 400px) {
+    .card__button__group {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .btn--pricing:not(:last-child) {
+        margin-right: 0;
+        margin-bottom: 12px;
+    }
+}
